--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,18 @@
 
 body {
   text-align:center;
-  height: 100vh;
+  height: 100%;
+  font-size: 15px;
+}
+
+.hero {
+  background-color: rgb(11, 6, 71);
+  color: whitesmoke;
+  border-radius: 20px;
+  display: inline-block;
+  margin-bottom: 10px;
+  padding: 2px 10px;
+  font-size: 22px;
 }
 
 .container {
@@ -9,9 +20,14 @@ body {
   margin: 0 auto !important;
   text-align: center !important;
   background-color: rgb(246, 206, 202) !important;
-  border: 6px solid rgb(240, 70, 70);
+  border: 1px solid rgba(3, 44, 19, 0.678);
   border-radius: 15px;
-  height: 100vh !important; 
+  height: 100% !important;
+  background-image: url('./Whatsapp-Wallpaper.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
 }
 .row {
   margin-top: 3% !important;
@@ -22,6 +38,7 @@ input {
   border-radius:20px;
   padding-left: 7px;
   margin-right: 7px;
+  padding: 5px 10px;
   border: none;
 }
 
@@ -49,3 +66,15 @@ input {
 .dltbtn {
   background: rgba(0, 0, 0, 0.87);
 }
+
+li {
+  color: #000000;
+  padding: 3px 0px;
+  background-color: rgb(221, 217, 212);
+  border-radius: 30px;
+  border: 1px solid black;
+}
+
+/* input:hover, input:focus, input:active {
+border: none;
+} */
